--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>Spring_Demo Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -18,7 +19,13 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>6.2.0</version>
+      <version>6.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>6.2.1</version>
     </dependency>
 
     <dependency>
@@ -51,6 +58,9 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.4</version>
     </dependency>
+
+
+
   </dependencies>
   <build>
     <finalName>Simple_Blog</finalName>
